k8s/minikube/barca-kibana/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barca-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barca-kibana
  template:
    metadata:
      labels:
        app: barca-kibana
    spec:
      containers:
        - name: barca-kibana
          image: docker.elastic.co/kibana/kibana:8.11.0
          resources:
            limits:
              memory: '1Gi'
              cpu: '1500m'
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - name: barca-kibana
              containerPort: 5601
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config
