k8s/minikube/barca-kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: barca-kibana
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: barca-kibana
  ports:
    - name: barca-kibana
      port: 5601
      targetPort: 5601
      protocol: TCP
